devops-app/linkerd-viz-config/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: linkerd-viz
  annotations:
    cert-manager.io/cluster-issuer: devops-local
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_set_header Origin "";
    #   proxy_hide_header l5d-remote-ip;
    #   proxy_hide_header l5d-server-id;
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: web-ingress-auth
    # nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - linkerd-viz.devops.local
      secretName: tls-linkerd-viz.devops.local
  rules:
    - host: linkerd-viz.devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8084
